[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymexc"
version = "1.2.16"
description = "Unofficial python library for interacting with the MEXC crypto exchange"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9.0"
license = {text = "MIT"}
authors = [
    {name = "abuztrade", email = "abuztrade.work@gmail.com"}
]
keywords = [
    "mexc",
    "mexc api",
    "mexc api v1",
    "mexc futures bypass",
    "mexc api v2",
    "mexc api v3",
    "mexc spot",
    "mexc futures",
    "mexc websocket",
    "mexc http",
    "mexc rest",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Communications :: Email",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Financial and Insurance Industry",
]
dependencies = [
    "curl-cffi==0.11.1",
    "websocket-client==1.8.0",
    "wsaccel==0.6.7",
    "websockets==15.0.1",
    "protobuf==6.31.1",
    "python-dotenv==1.1.0",
    "pytest==8.4.0",
    "pytest-asyncio==1.0.0",
    "aiohttp==3.12.9",
]
[project.urls]
Homepage = "https://github.com/makarworld/pymexc"
Repository = "https://github.com/makarworld/pymexc"
"Bug Reports" = "https://github.com/makarworld/pymexc/issues"
Source = "https://github.com/makarworld/pymexc"

[tool.uv]
package = false
